--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -54,7 +54,7 @@ ul {
   color: var(--neutral-background-color1);
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) and (orientation: portrait) {
   .footer-links-container {
     margin: 0 auto;
     padding: 40px 20px 0 20px;
