--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -296,11 +296,11 @@ h4 {
   font-size: 40px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) and (orientation: portrait) {
   .hero-container {
     margin: 0 auto;
     padding: 0;
-    width: 95%;
+    width: 100%;
     height: 710px;
   }
 
@@ -343,7 +343,7 @@ h4 {
   }
 
   .content-background {
-    width: 95%;
+    width: 100%;
   }
 
   .about-container {
@@ -441,7 +441,7 @@ h4 {
   .experience-container {
     margin: 0 auto;
     padding: 80px 0 80px 0;
-    width: 300px;
+    width: 95%;
     align-content: center;
   }
 
@@ -451,7 +451,7 @@ h4 {
 
   .experience-container p {
     font-size: 16px;
-    width: 300px;
+    width: 95%;
     text-align: center;
   }
 
@@ -471,24 +471,24 @@ h4 {
 
   .contact-container {
     margin-bottom: 60px;
-    width: 95%;
+    width: 100%;
     height: 300px;
   }
 
   .contact-container p {
     padding: 90px 0 0 0;
     font-size: 24px;
-    width: 300px;
+    width: 95%;
     text-align: center;
   }
 }
 
-@media screen and (min-width: 901px) and (max-width: 2688px) and (orientation: portrait) {
+@media screen and (min-width: 901px) and (max-width: 2288px) and (orientation: landscape) {
   .hero-container {
     margin: 0 auto;
     padding: 0;
-    width: 95%;
-    height: 350px;
+    max-width: 95%;
+    height: 450px;
   }
 
   .hero-image {
@@ -502,16 +502,16 @@ h4 {
     margin: 0;
     padding: 0;
     margin-top: 30px;
-    max-width: 300px;
+    max-width: 70%;
   }
   .author-name {
     font-size: 40px;
   }
 
   .hero-text {
-    margin-top: 40px;
-    width: 350px;
-    text-align: center;
+    margin-top: 130px;
+    width: 100%;
+    text-align: right;
   }
 
   .hero-text h1 {
@@ -519,7 +519,7 @@ h4 {
   }
 
   .hero-text .body-text-medium {
-    padding: 15px 15px;
+    padding: 15px 0px;
     font-size: 15px;
   }
 
@@ -671,7 +671,7 @@ h4 {
   .contact-container p {
     padding: 90px 0 0 0;
     font-size: 24px;
-    width: 600px;
+    width: 95%;
     text-align: center;
   }
 }
