--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -58,7 +58,7 @@ ul {
   .footer-links-container {
     margin: 0 auto;
     padding: 40px 20px 0 20px;
-    width: 90%;
+    width: 100%;
     gap: 30px;
   }
 
@@ -83,5 +83,14 @@ ul {
 
   footer {
     height: 350px;
+  }
+}
+
+@media screen and (min-width: 901px) and (max-width: 2288px) and (orientation: landscape) {
+  .footer-links-container {
+    margin: 0 auto;
+    padding: 40px 20px 0 20px;
+    width: 100%;
+    gap: 30px;
   }
 }
