--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -137,3 +137,84 @@ body {
   gap: 27px;
   justify-content: right;
 }
+
+@media screen and (max-width: 900px) and (orientation: portrait) {
+  .contact-page-container {
+    margin: 0px auto;
+    width: 95%;
+    height: 500px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
+
+  .contact-page-left {
+    margin: 0;
+    padding: 0;
+  }
+
+  .image-background {
+    width: 100%;
+    height: 370px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
+
+  .plant-image {
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+  }
+
+  .contact-details-section {
+    margin: 0 auto;
+    padding: 19px 0 0 0;
+    height: 130px;
+    text-align: center;
+    background-color: var(--neutral-background-color5);
+    border-bottom-left-radius: 0px;
+  }
+
+  .contact-page-right {
+    padding: 70px 0 0 50px;
+    background-color: var(--neutral-background-color4);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+  }
+
+  .contact-page-content {
+    padding: 12px 0 0 0;
+  }
+
+  .contact-page-container h4 {
+    font-size: 24px;
+  }
+
+  .contact-page-container p {
+    font-size: 15px;
+  }
+
+  .contact-page-point {
+    padding: 0;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+  }
+
+  .contact-highlight {
+    color: var(--primary-color);
+    font-weight: 600;
+  }
+
+  .contact-page-button {
+    font-size: 15px;
+    width: 130px;
+    height: 36px;
+  }
+
+  .contact-page-buttons {
+    display: flex;
+    margin-bottom: 50px;
+    padding: 30px 60px 0 0;
+    gap: 27px;
+    justify-content: center;
+  }
+}
