--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -322,6 +322,7 @@ h4 {
   }
 
   .hero-text {
+    margin: 0 auto;
     margin-top: 0px;
     width: 350px;
     text-align: center;
@@ -473,6 +474,7 @@ h4 {
     margin-bottom: 60px;
     width: 100%;
     height: 300px;
+    text-align: center;
   }
 
   .contact-container p {
@@ -480,6 +482,10 @@ h4 {
     font-size: 24px;
     width: 95%;
     text-align: center;
+  }
+
+  .contact-container button {
+    align-items: center;
   }
 }
 
@@ -598,7 +604,7 @@ h4 {
     padding: 3px 0 3px 0;
     text-align: center;
     background-color: var(--neutral-background-color5);
-    width: 750px;
+    width: 95%;
   }
 
   .soft-skills-container {
@@ -666,12 +672,16 @@ h4 {
     height: 300px;
     justify-items: center;
     align-items: center;
+    text-align: center;
   }
 
   .contact-container p {
     padding: 90px 0 0 0;
     font-size: 24px;
     width: 95%;
-    text-align: center;
+  }
+
+  .contact-container button {
+    align-items: center;
   }
 }
