--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -218,3 +218,9 @@ body {
     justify-content: center;
   }
 }
+
+@media screen and (min-width: 901px) and (max-width: 2288px) and (orientation: landscape) {
+  .contact-page-container {
+    width: 95%;
+  }
+}
