--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -296,7 +296,7 @@ h4 {
   font-size: 40px;
 }
 
-@media screen and (max-width: 900px) /*and (orientation: portrait) */ {
+@media screen and (max-width: 900px) and (orientation: portrait) {
   .hero-container {
     margin: 0 auto;
     padding: 0;
@@ -488,7 +488,7 @@ h4 {
     align-items: center;
   }
 }
-/*
+
 @media screen and (min-width: 901px) and (max-width: 2288px) and (orientation: landscape) {
   .hero-container {
     margin: 0 auto;
@@ -542,7 +542,7 @@ h4 {
   }
 
   /*About section*/
-/*
+
   .about-container {
     margin: 0 auto;
     padding: 80px 0 20px 0;
@@ -685,4 +685,3 @@ h4 {
     align-items: center;
   }
 }
-*/
